--- a/essay3.tex
+++ b/essay3.tex
@@ -18,7 +18,7 @@
 I would promote diversity with a program to increase retention of women in CS bachelor's degree programs.
 %I have chosen to target retention rather than attraction because rather than having to identify more women who are interested in CS, we already have a self-identified group of women who are interested in CS that we just have to support so they can finish their degrees.
 %Retention is a good target because as Sheryl Sandberg said, you can instantly double your women in CS by keeping half of them from dropping out.  % need citation; not sure if it'd be offensive to use quote from her
-Women who have embarked on a degree program have already taken the important step of declaring an interest in CS (itself the subject of many diversity programs), so if we want more female CS graduates, they are a great target for our efforts.
+Women who have embarked on a degree program have already taken the important step of declaring an interest in CS (itself the subject of many diversity programs), so if we want more female CS graduates, they are a great target for our efforts.  % low-hanging fruit argument
 
 My program, called the Buddy \textit{Sis}tem, would be implemented at the university level.
 %The idea would be to enroll freshmen women in the program.
@@ -29,8 +29,8 @@ This would be a single person rather than one per class, and it would apply to a
 This may sound draconian, but based on my experiences at UC Berkeley, I believe that it has powerful advantages that outweigh the hassles.
 
 % First point:  need to enforce regular contact so they can build trust
-The first advantage of the Buddy \textit{Sis}tem is that it provides the structure necessary for building trust.
-While an informal cadre of female friends can be immensely beneficial, the danger is that since most CS departments have so few female students, they are unlikely to spend much time together without a conscious effort, especially since the first year of college can be so overwhelming.
+First, the Buddy \textit{Sis}tem provides the structure necessary for building trust.
+While an informal cadre of female friends can be immensely beneficial, the danger is that since most CS departments have few female students, they are unlikely to spend much time together without a conscious effort, especially since the first year of college can be so overwhelming.
 Infrequent contact and the weak ties that result do little to provide an opportunity for confiding one's struggles.
 This is problematic because, as evidenced by the popularity of ``The Impostor Syndrome" seminars, many women feel inadequate, particularly in male-dominated environments.
 Buddies would engage in regular contact so they would feel more comfortable sharing their feelings with each other.
@@ -50,19 +50,19 @@ Talking to someone in another class with a completely different style of instruc
 When implementing the program, women should be paired up according to their technical experience (\eg years coding, math background) and extracurricular interests.
 %Personally, merely seeing other women in CS is not enough to make me believe I can succeed if they are very different from me (\eg more experienced at coding, more into the nerd subculture, less interested in things outside of CS).
 I believe that a woman will be most encouraged regarding her potential for success in CS if she sees someone like her doing well.
-This may be even more important in the case of women who have less coding experience or interests that are out of step with the nerd subculture that is usually associated with CS; these women may therefore be in greater danger of feeling out of place.
+This may be even more important in the case of women who have less coding experience or interests that are out of step with the nerd subculture that is usually associated with CS; these women are probably in greater danger of feeling out of place.
 %This addresses what I believe is the most fundamental confidence issue that women in CS face, which is asking yourself whether people like you can succeed in CS.
 %It can be so hard when you look around and don't see any role models that you can relate to.
 %However, it's been my experience that having someone you have a lot in common with that you respect gives you confidence that you can also succeed.
-I have been fortunate to have a friend in my lab with whom I interact on a daily basis, and we not only share non-CS interests (\eg fine dining) but also struggle in some of the same ways.
+I have been fortunate to have a friend in my lab with whom I interact on a daily basis, and we not only share non-CS interests but also struggle in some of the same ways.
 Our interactions are a powerful source of mutual encouragement.
 Rather than leaving it to chance, the Buddy \textit{Sis}tem would help women develop this sot of relationship.
 
 To measure the success of my program, I would compare women outside the program (control group) with buddies (treatment group) via qualitative and quantitative metrics.
-I would issue surveys to assess their mental health (\eg do they have less depression or anxiety?) as well as their confidence in their abilities to succeed in the degree program.
+I would issue surveys to assess their mental health and self-confidence, and I would also look at their academic performance.
 %Ideally, I'd like to see that the women in the program score higher on these scales than women going at the degree program on their own.
 %If women opted to continue taking classes with their buddies after the first year, that would also be indicative of a successful program.
-I would also look at their academic performance (\ie GPA).
+%I would also look at their academic performance (\ie GPA).
 %The program would be a success if participants scored higher on the surveys and with respect to GPA.
 %I'd also like to see if these women translate their increased confidence into better academic performance -- my hypothesis is that they would.
 Most importantly, since this program is addressed at improving retention rates, I would compare the rates of attrition in the control and treatment groups.
